refactor: View와 강하게 결합되어 있는 Enum 리팩토링